fix css class name (#591)
Broken in 90af55d4c84f545635f238178b30748a0e8093ee

--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -317,7 +317,7 @@ button.action-button {
     color: var(--very-light-text-color);
 }
 
-.entry:not(.entry-current) .current {
+.entry:not(.entry-current) .action-current-indicator {
     display: none;
 }
 
